tests/testcases/errors/BCE0082-1.boo
"""
BCE0082-1.boo(6,20): BCE0082: 'string' is not a callable type. Event type must be a callable type.
"""
class Button:

	event Click as string
